# frigg

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: auth.rs  binary_info.rs  client.rs  commands.rs  decrypt.rs  main.rs  progress.rs  requests.rs  version.rs  xml.rs
