[package]
name = "frigg"
version = "0.2.0"
description = "Download and decrypt stock firmwares for Samsung devices"
license = "GPL-3.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["samsung", "firmware", "download"]
edition = "2021"
rust-version = "1.70"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
aes = "0.8"
cbc = "0.1"
base64ct = { version = "1.0", features = ["std"] }
cipher = { version = "0.4", features = ["std"] }
generic-array = "0.14"
md-5 = "0.10"

anyhow = "1.0.77"
clap = { version  = "4.0.27", features = ["cargo", "deprecated"] }
indicatif = "0.17"

format_xml = "0.3"
roxmltree = "0.19.0"

futures-util = { version = "0.3.15", default-features = false, features = ["io"] }
reqwest = { version = "0.11.4", features = ["cookies", "stream"] }
tokio = { version = "1.7", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
